--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/google.maps": "^3.58.0",
     "@types/node": "^22.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
